# polymarket-tui

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/rules/: design-principles.md
.claude/skills/blog-post/: SKILL.md
.github/workflows/: blog-post.yml  newsletter.yml  pages.yml  publish.yml
Formula/: polymarket-tui.rb
docs/: ADR-001-tech-stack.md  README.md  api-reference.md  architecture.md  blog-todo.md  config-and-auth.md  evaluation.md  homebrew-core.md  marketing-log.md  marketing.md  releasing.md  roadmap.md  trading.md  ui-spec.md  user-journeys.md
infra/newsletter/: .terraform.lock.hcl  CLAUDE.md  api.tf  backend.tf  budgets.tf  dynamodb.tf  lambda.tf  main.tf  outputs.tf  schedule.tf  ses.tf  variables.tf  versions.tf
infra/newsletter/src/: blurb.py  digest_data.py  digest_render.py  handler_api.py  handler_digest.py  news.py  nl_common.py
journeys/: browse.json  c1_discover.json  c2_category.json  c3_first_buy.json  c4_research.json  c5_watch.json  c6_portfolio.json  c7_sell.json  c8_search.json  c9_recovery.json  cancel_strip.json  density_narrow.json  density_toggle.json  e1_direct.json  e2_quick_order.json  e3_book_ladder.json  e4_cancel.json  e5_limit.json  e6_watchlist.json  e7_pos_to_market.json  e8_trader.json  event_home.json  live_persist_a.json  live_persist_b.json  live_toggle.json  market_book_nav.json  market_book_nav2.json  market_book_nav3.json  market_v2.json  misc.json  own_orders.json  own_orders2.json  persona_casual.json  persona_targeted.json  persona_targeted2.json  portfolio_root.json  screens.json  screens2.json  trader_sell.json  trades_fix.json
packaging/homebrew-core/: polymarket-tui.rb
scripts/: gen_brew_resources.py  journey_env.sh  make_site_images.py  record_demo.sh  redact_cast.py  trim_cast.py  tui_journey.py  tui_snap.py
site/: CNAME  README.md  index.html  robots.txt  sitemap.xml
site/assets/: blog.css
site/blog/: ballon-dor-2026-odds-kane-vs-yamal.html  fed-rate-decision-july-2026-odds.html  feed.xml  how-to-read-a-polymarket-order-book.html  index.html  israel-iran-ceasefire-odds-july-2026.html  lebron-to-miami-heat-odds-leaked-video.html  spain-vs-argentina-2026-world-cup-final-odds.html  what-a-polymarket-price-means.html  why-spain-vs-argentina-2026-resolved-draw.html
src/polymarket_tui/: __main__.py
src/polymarket_tui/api/: clob.py  clob_auth.py  data.py  gamma.py  ws.py
src/polymarket_tui/core/: auth.py  config.py  credstore.py  fileio.py  fmt.py  keychain.py  links.py  ntp.py  proxy.py
src/polymarket_tui/models/: market.py  portfolio.py  ws.py
src/polymarket_tui/services/: orders.py  portfolio.py
src/polymarket_tui/state/: cache.py  prefs.py  watchlist.py
src/polymarket_tui/ui/: app.py  follow.py  liveness.py  staleness.py  theme.py  tiers.py
tests/: test_book_cursor.py  test_closed_positions.py  test_credstore.py  test_cursor_follow.py  test_density_rows.py  test_event_table_cursor.py  test_event_table_flags.py  test_fmt.py  test_help_bindings.py  test_home_sort.py  test_links.py  test_market_fill_refresh.py  test_nav_drill.py  test_newsletter_digest.py  test_notify_markup_guard.py  test_order_details.py  test_order_event_label.py  test_order_panel_tick.py  test_orders.py  test_pane_attribute_shadowing.py  test_portfolio_service.py  test_positions.py  test_prefs.py  test_proxy.py  test_reconcile.py  test_refresh_on_return.py  test_resolution.py  test_status_line_markup.py  test_tiers.py  test_ws.py  test_ws_channel.py
tests/fixtures/: ws_market_book.json  ws_market_last_trade_price.json  ws_market_price_change.json  ws_user_order_cancellation.json  ws_user_order_placement.json
(+39 files in other folders)
