[project]
name = "polymarket-tui"
version = "0.1.1"
description = "Fast, keyboard-driven terminal client for Polymarket"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Byron Smith", email = "byron.lg.smith@gmail.com" }
]
requires-python = ">=3.12"
keywords = [
    "polymarket",
    "prediction-markets",
    "tui",
    "terminal",
    "textual",
    "trading",
    "cli",
    "order-book",
    "betting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=1.0",
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "py-clob-client>=0.34.6",
    "py-clob-client-v2>=1.0.2",
    "websockets>=12.0",
]

[project.scripts]
polymarket-tui = "polymarket_tui.__main__:main"

[project.urls]
Homepage = "https://byronxlg.github.io/polymarket-tui/"
Repository = "https://github.com/byronxlg/polymarket-tui"
Issues = "https://github.com/byronxlg/polymarket-tui/issues"
Changelog = "https://github.com/byronxlg/polymarket-tui/releases"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "textual-dev>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
